<resources>
    <string name="app_name">EKassir</string>
    <string name="details_activity">Подробности по заказу</string>
    <string name="orders_list">Список заказов</string>

    <string name="no_internet_msg">No internet =(\nTry again?</string>
    <string name="order_load_failed_msg">Не удалось показать подробности по этому заказу</string>
    <string name="picture_load_failed_msg">Не удалось загрузить фото машины</string>

    <string name="start_address">Откуда:</string>
    <string name="end_address">Куда:</string>
    <string name="order_time">Время:</string>
    <string name="order_price">Цена:</string>
    <string name="order_price_formatter" formatted="false">%d.%d %s</string>

    <string name="vehicle_details">Подробности по машине:</string>
    <string name="vehicle_model_name">Модель:</string>
    <string name="vehicle_reg_number">Номер:</string>
    <string name="vehicle_driver_name">Водитель:</string>
</resources>
