<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:shrinkColumns="1">

        <TableRow>
            <TextView
                android:text="@string/start_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_start_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/end_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_end_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/order_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/order_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_order_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>


        <TextView
            android:text="@string/vehicle_details"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_vehicle_photo"
                android:layout_height="200dp"
                android:layout_width="200dp" />
        </FrameLayout>

        <TableRow>
            <TextView
                android:text="@string/vehicle_model_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_vehicle_model_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/vehicle_reg_number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_vehicle_reg_number"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/vehicle_driver_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_vehicle_driver_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>
    </TableLayout>
</ScrollView>