<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="0.5dp"
    cardview:cardCornerRadius="0dp"
    cardview:cardElevation="0dp"
    android:foreground="?android:attr/selectableItemBackground">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:shrinkColumns="1">

        <TableRow>
            <TextView
                android:text="@string/start_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_start_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/end_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_end_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/order_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_order_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/order_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tv_order_price"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        </TableRow>
    </TableLayout>
</android.support.v7.widget.CardView>